# storage_server

./: .gitignore  CMakeLists.txt
client_desktop/: main  main.cpp
server/: README.md  main.c  main.cpp  network.c  network.cpp  network.h  server_logic.c  server_logic.cpp  server_logic.h
shared/: file_utils.c  file_utils.h  protocol.h
tests/: CMakeLists.txt  file_utils_test.c  main_test.c  network_test.c  protocol_test.c  server_logic_test.c  server_test.c
